# rankbot

./: .gitignore  CHANGELOG.md  LICENSE  README.md  bot.js  bot.py  config.example.json  message_handler.py  misc.py  package.json  pnpm-lock.yaml  privacypolicy.md  pyproject.toml  requirements.txt  sendreq.py  settings-example.py  test.py  tsconfig.json  vercel.json  your_bot.py
api/: checkalive.ts
commands/: apexarena.js  apexarena.py  apexrank.js  apexrank.py  apvalrank.py  base_command.py  changeprefix.py  cmd.js  commands.py  euvalrank.py  help.py  krvalrank.py  legacyapexrank.py  legacyvalrank.py  navalrank.py  newvalranktest.py  pcapexrank.py  psapexrank.py  uniapexrank.py  valldb.js  valnccachereset.js  valrank.js  valrank.py  valrankhistory.py
interactions/: apexarena.js  apexrank.js  valLdbRes.js  valnccachereset.js  valrank.js
messages/: apexarenaRes.js  apexrankRes.js  valLdbRes.js  valnccacheresetRes.js  valrankRes.js
misc/: db-seed.ts  dl.py
src/: bot.ts  config.ts.example  types.d.ts
src/commands/: apexarena.ts  apexrank.ts  changeprefix.ts  cmd.ts  removeprefix.ts  valldb.ts  valnccachereset.ts  valrank.ts  version.ts
src/events/: guildCreate.ts  guildDelete.ts  interactionCreate.ts  messageCreate.ts  ready.ts
src/interactions/: apexarena.ts  apexrank.ts  valldb.ts  valnccachereset.ts  valrank.ts  version.ts
src/messages/: apexarenares.ts  apexrankres.ts  valldbres.ts  valnccachereset.ts  valrankres.ts  version.ts
src/types/: pretty-seconds.d.ts
utils/: apex.js  color.js  img.js  logging.js  val.js
www/: index.md  legal.md
(+18 files in other folders)
