[tool.poetry]
name = "rankbot"
version = "1.1.0"
description = "Discord bot for querying rank for VALORANT and Apex Legends player."
authors = ["Jakkaphat Chalermphanaphan <gunt@guntxjakka.me>"]
license = "	GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4.post0"
APScheduler = "^3.8.1"
asyncio = "^3.4.3"
async-timeout = "^3.0.1"
chardet = "^4.0.0"
nextcord = "^2.0.0a4"
multidict = "^5.2.0"
pytz = "^2021.3"
requests = "^2.26.0"
six = "^1.16.0"
tzlocal = "^4.1"
websockets = "^10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
